openshift-example/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd
  namespace: httpd-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      volumes:
        - name: homepage
          configMap:
            name: httpd-homepage
            defaultMode: 420
      containers:
        - name: container
          image: 'quay.io/rh-ee-scaps/httpd:2.4.68-1-8'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: homepage
              mountPath: /var/www/html
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
