openshift-example/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd
  namespace: httpd-demo
spec:
  clusterIP: 100.95.90.3
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 100.95.90.3
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: httpd
