openshift-example/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd
  namespace: httpd-demo
spec:
  host: httpd-httpd-demo.apps.lab.virer.net
  to:
    kind: Service
    name: httpd
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
